feat: complete v1.0 - Gemini support, streaming, pagination, testing
Phase 1 - SDK Complete:
- Add Gemini interceptor (both @google/generative-ai + vertexai)
- Add streaming support for all 3 providers (OpenAI/Anthropic/Gemini)
- Add error/retry tracking with error code classification
- Add cached token detection (OpenAI/Anthropic)
- Add Gemini model pricing constants

Phase 2 - Backend Enhancements:
- Add cursor-based pagination (timestamp+id composite)
- Add Redis-based rate limiting middleware (fail-open)
- Add prompt similarity service (hash-based grouping)
- Add CSV/JSON streaming export endpoints
- Add DB indexes for query performance

Phase 3 - Dashboard Polish:
- Wire date picker to all views via TimeRangeContext
- Add model comparison page (/models)
- Add export buttons (CSV/JSON) on all pages
- Add skeleton loaders for loading states

Phase 4 - Testing & Seed:
- Add 217 tests across all packages (shared:46, sdk:74, server:56, web:41)
- Add frontend testing setup (Vitest + React Testing Library)
- Enhance seed script (1000 events, 3 providers, streaming/errors)

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,18 @@ dist/
 .env.local
 *.tsbuildinfo
 .DS_Store
+CLAUDE.md
+.idea/
+.vscode/
+*.log
+*.lock
+coverage/
+*.tgz
+*.zip
+*.tar.gz
+*.bak
+*.tmp
+*.swp
+*.swo
+*.swn
+repomix-output.xml
