--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@ai-cost-profiler/shared": "workspace:*",
     "cors": "^2.8.0",
+    "csv-stringify": "^6.6.0",
     "dotenv": "^16.4.0",
     "drizzle-orm": "^0.30.0",
     "express": "^4.18.0",
