--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -7,39 +7,46 @@
     "dev": "next dev --port 3000",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint src/"
+    "lint": "eslint src/",
+    "test": "vitest run"
   },
   "dependencies": {
     "@ai-cost-profiler/shared": "workspace:*",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.0",
+    "@radix-ui/react-slot": "^1.0.0",
+    "@radix-ui/react-tooltip": "^1.0.0",
+    "@tanstack/react-query": "^5.28.0",
+    "@visx/group": "^3.3.0",
+    "@visx/hierarchy": "^3.3.0",
+    "@visx/responsive": "^3.3.0",
+    "@visx/scale": "^3.5.0",
+    "@visx/text": "^3.3.0",
+    "@visx/tooltip": "^3.3.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "d3-flame-graph": "^4.1.0",
+    "d3-selection": "^3.0.0",
+    "lucide-react": "^0.344.0",
     "next": "^14.2.0",
     "react": "^18.3.0",
     "react-dom": "^18.3.0",
-    "@tanstack/react-query": "^5.28.0",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0",
-    "lucide-react": "^0.344.0",
-    "@radix-ui/react-slot": "^1.0.0",
-    "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-tooltip": "^1.0.0",
-    "@radix-ui/react-separator": "^1.0.0",
     "recharts": "^2.12.0",
-    "@visx/hierarchy": "^3.3.0",
-    "@visx/scale": "^3.5.0",
-    "@visx/group": "^3.3.0",
-    "@visx/text": "^3.3.0",
-    "@visx/tooltip": "^3.3.0",
-    "@visx/responsive": "^3.3.0",
-    "d3-flame-graph": "^4.1.0",
-    "d3-selection": "^3.0.0"
+    "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.2",
+    "@testing-library/user-event": "^14.6.1",
+    "@types/d3-selection": "^3.0.0",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "@types/d3-selection": "^3.0.0",
-    "tailwindcss": "^3.4.0",
-    "postcss": "^8.4.0",
+    "@vitejs/plugin-react": "^5.1.4",
     "autoprefixer": "^10.4.0",
-    "typescript": "^5.4.0"
+    "jsdom": "^28.1.0",
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.4.0",
+    "vitest": "^4.0.18"
   }
 }
