--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@ai-cost-profiler/shared": "workspace:*",
+    "compression": "^1.8.1",
     "cors": "^2.8.0",
     "csv-stringify": "^6.6.0",
     "dotenv": "^16.4.0",
@@ -27,6 +28,7 @@
     "pino-pretty": "^10.3.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.0",
     "@types/express": "^4.17.0",
     "@types/pg": "^8.11.0",
