Optimize and add landing page

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,9 @@ NEXT_PUBLIC_API_URL=http://localhost:3100
 
 # CORS
 CORS_ORIGIN=http://localhost:3000
+
+# API Authentication (comma-separated keys, empty = disabled for dev)
+# API_KEYS=your-api-key-1,your-api-key-2
+
+# Logging
+# LOG_LEVEL=debug
